add targets for win7.